manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod
  labels:
    app: myapp
    env: prod

spec:
  containers:
  - name: mycontainername
    image: nginx:latest
    ports:
    - containerPort: 80
