manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: prod
 labels:
   app: nginx
   env: prod

spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service: 
            name: nginx-service
            port:
              number: 80
